# bitcoin-prices-scraper

./: .gitattributes  .gitignore  README.md  btc-price-postporcesesd.json  btc-price-postprocessed.json  btc-price.json  fetch_data.js  postprocess.js  pyproject.toml  walk-through.md  write_data.py
.github/workflows/: scrape.yaml  scrape_and_save.yaml  scrape_and_save.yml  scrape_and_save_dev.yml  scrape_and_save_prod.yml
scripts/: history.sh  terraform.sh
terraform/github_action/: backend.hcl  iam.tf  main.tf  variables.tf
terraform/modules/: outputs.tf  s3.tf  variables.tf
terraform/s3/: backend.hcl  outputs.tf  s3.tf  variables.tf
terraform/s3/dev/: backend_dev.hcl  outputs.tf  variables.tf
terraform/s3/prod/: backend_prod.hcl  main.tf  variables.tf
