[project]
name = "bitcoin-prices-scraper"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.67",
    "polars>=1.14.0",
    "pyarrow>=18.0.0",
]

[dependency-groups]
lint-fmt = [
    "mypy>=1.13.0",
    "ruff>=0.7.4",
]
notebook = [
    "ipykernel>=6.29.5",
]

[tool.mypy]
python_version = 3.11
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_calls = true
disable_error_code = [
    "no-redef",
]

[[tool.mypy.overrides]]
module = [
    "pyarrow.*",
]
ignore_missing_imports = true
