[project]
name = "bitcoin-prices-scraper"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.67",
    "polars>=1.14.0",
    "pyarrow>=18.0.0",
]

[tool.uv]
package = false

[dependency-groups]
lint-fmt = [
    "mypy>=1.13.0",
    "ruff>=0.7.4",
]
notebook = [
    "ipykernel>=6.29.5",
]

[tool.mypy]
python_version = 3.11
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_calls = true
disable_error_code = [
    "no-redef",
]

[[tool.mypy.overrides]]
module = [
    "pyarrow.*",
]
ignore_missing_imports = true

[tool.ruff]
extend-exclude = [
    ".ipynb_checkpoints",
    ".pyenv",
    ".pytest_cache",
    ".vscode",
    "build",
    "site-packages",
]
force-exclude = true
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["I", "F401"]
